Created basic DB connection and an empty Planet class

--- a/WWW/appsettings.json
+++ b/WWW/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DBContext": "Data Source=190.190.200.100,1433;Network Library=DBMSSOCN;Initial Catalog=kilgharrahDB;User ID=kilgharrah;Password=kilgharrahPassword;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
