Updated DB CreateTabless to contain the numeric properties

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:34589",
-      "sslPort": 44351
+      "applicationUrl": "http://localhost:54970/",
+      "sslPort": 44353
     }
   },
   "profiles": {
