--- a/Website/Properties/launchSettings.json
+++ b/Website/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   "profiles": {
     "Website": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
